# backend/api.yaml
@@ -10,20 +10,6 @@ servers:
     description: Tim's Test Server
 paths:
   /study:
-    get:
-      description:
-        Gets a list of all available studies in the system.
-      tags:
-        - study
-      responses:
-        '200':
-          description: A list of all available studies.
-          content:
-            application/json:
-              schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/Study'
     post:
       description:
         Creates a new study in the system.
